// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should allow styles override 1`] = `
.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-4 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  font-size: 0.75rem;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #f1f7ff;
  color: #0066f5;
  border-color: #0066f5;
  color: red;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: blue;
}

<div
  class="emotion-4"
>
  <div
    class="emotion-3"
  >
    <span
      class="emotion-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm1 16h-2v-7h2zm-1-9a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 9z"
          data-name="Informação"
        />
      </svg>
    </span>
    <div
      class="emotion-2"
    >
      Information.
    </div>
  </div>
</div>
`;

exports[`Alert should render correctly 1`] = `
.emotion-8 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  font-size: 0.75rem;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #f1f7ff;
  color: #0066f5;
  border-color: #0066f5;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  margin-left: auto;
  padding-left: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #53595E;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-5 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-5 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-5:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-5:focus {
  outline: none;
  box-shadow: 0 0 0 2px #056DFF;
}

.emotion-5:not(:disabled):hover {
  background-color: rgba(103,108,112,0.16);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-17 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  font-size: 0.75rem;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #f0faf2;
  color: #00821a;
  border-color: #00821a;
}

.emotion-26 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  font-size: 0.75rem;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #fff9f4;
  color: #d43900;
  border-color: #d43900;
}

.emotion-35 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  font-size: 0.75rem;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #FAF0F2;
  color: #E0001A;
  border-color: #E0001A;
}

<div>
  <div
    class="emotion-8"
  >
    <div
      class="emotion-7"
    >
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm1 16h-2v-7h2zm-1-9a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 9z"
            data-name="Informação"
          />
        </svg>
      </span>
      <div
        class="emotion-2"
      >
        Information.
      </div>
      <span
        class="emotion-6"
      >
        <button
          class="emotion-5"
          type="button"
        >
          <span>
            <span
              class="emotion-4"
            >
              <svg
                aria-hidden="true"
                class="emotion-0"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.71 7.71l-1.42-1.42-4.29 4.3-4.29-4.3-1.42 1.42 4.3 4.29-4.3 4.29 1.42 1.42 4.29-4.3 4.29 4.3 1.42-1.42-4.3-4.29 4.3-4.29z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    class="emotion-17"
  >
    <div
      class="emotion-7"
    >
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm-1.29 14.21l-4.42-4.4 1.42-1.42 3 3 5.59-5.6 1.42 1.42z"
          />
        </svg>
      </span>
      <div
        class="emotion-2"
      >
        Success message.
      </div>
      <span
        class="emotion-6"
      >
        <button
          class="emotion-5"
          type="button"
        >
          <span>
            <span
              class="emotion-4"
            >
              <svg
                aria-hidden="true"
                class="emotion-0"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.71 7.71l-1.42-1.42-4.29 4.3-4.29-4.3-1.42 1.42 4.3 4.29-4.3 4.29 1.42 1.42 4.29-4.3 4.29 4.3 1.42-1.42-4.3-4.29 4.3-4.29z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    class="emotion-26"
  >
    <div
      class="emotion-7"
    >
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M21.83 19L12.92 3.62a1 1 0 0 0-1.84 0L2.17 19c-.46.88.07 2 .92 2h17.82c.85 0 1.38-1.14.92-2zM11 7h2v7h-2zm1 12a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 19z"
          />
        </svg>
      </span>
      <div
        class="emotion-2"
      >
        Alert message.
      </div>
      <span
        class="emotion-6"
      >
        <button
          class="emotion-5"
          type="button"
        >
          <span>
            <span
              class="emotion-4"
            >
              <svg
                aria-hidden="true"
                class="emotion-0"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.71 7.71l-1.42-1.42-4.29 4.3-4.29-4.3-1.42 1.42 4.3 4.29-4.3 4.29 1.42 1.42 4.29-4.3 4.29 4.3 1.42-1.42-4.3-4.29 4.3-4.29z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    class="emotion-35"
  >
    <div
      class="emotion-7"
    >
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 12A10 10 0 1 0 12 2 10 10 0 0 0 2 12zm2 0a7.92 7.92 0 0 1 1.69-4.9L16.9 18.31A7.92 7.92 0 0 1 12 20a8 8 0 0 1-8-8zm16 0a7.92 7.92 0 0 1-1.69 4.9L7.1 5.69A7.92 7.92 0 0 1 12 4a8 8 0 0 1 8 8z"
          />
        </svg>
      </span>
      <div
        class="emotion-2"
      >
        Error message.
      </div>
      <span
        class="emotion-6"
      >
        <button
          class="emotion-5"
          type="button"
        >
          <span>
            <span
              class="emotion-4"
            >
              <svg
                aria-hidden="true"
                class="emotion-0"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.71 7.71l-1.42-1.42-4.29 4.3-4.29-4.3-1.42 1.42 4.3 4.29-4.3 4.29 1.42 1.42 4.29-4.3 4.29 4.3 1.42-1.42-4.3-4.29 4.3-4.29z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert should render correctly when inline 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0.5rem;
}

.emotion-4 {
  padding: 0 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  font-size: 0.75rem;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #f1f7ff;
  color: #0066f5;
  border-color: #0066f5;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1rem;
}

.emotion-9 {
  padding: 0 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  font-size: 0.75rem;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #f0faf2;
  color: #00821a;
  border-color: #00821a;
}

.emotion-14 {
  padding: 0 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  font-size: 0.75rem;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #fff9f4;
  color: #d43900;
  border-color: #d43900;
}

.emotion-19 {
  padding: 0 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  font-size: 0.75rem;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #FAF0F2;
  color: #E0001A;
  border-color: #E0001A;
}

<div>
  <div
    class="emotion-4"
  >
    <div
      class="emotion-3"
    >
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm1 16h-2v-7h2zm-1-9a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 9z"
            data-name="Informação"
          />
        </svg>
      </span>
      <div
        class="emotion-2"
      >
        Information.
      </div>
    </div>
  </div>
  <div
    class="emotion-9"
  >
    <div
      class="emotion-3"
    >
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm-1.29 14.21l-4.42-4.4 1.42-1.42 3 3 5.59-5.6 1.42 1.42z"
          />
        </svg>
      </span>
      <div
        class="emotion-2"
      >
        Success message.
      </div>
    </div>
  </div>
  <div
    class="emotion-14"
  >
    <div
      class="emotion-3"
    >
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M21.83 19L12.92 3.62a1 1 0 0 0-1.84 0L2.17 19c-.46.88.07 2 .92 2h17.82c.85 0 1.38-1.14.92-2zM11 7h2v7h-2zm1 12a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 19z"
          />
        </svg>
      </span>
      <div
        class="emotion-2"
      >
        Alert message.
      </div>
    </div>
  </div>
  <div
    class="emotion-19"
  >
    <div
      class="emotion-3"
    >
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 12A10 10 0 1 0 12 2 10 10 0 0 0 2 12zm2 0a7.92 7.92 0 0 1 1.69-4.9L16.9 18.31A7.92 7.92 0 0 1 12 20a8 8 0 0 1-8-8zm16 0a7.92 7.92 0 0 1-1.69 4.9L7.1 5.69A7.92 7.92 0 0 1 12 4a8 8 0 0 1 8 8z"
          />
        </svg>
      </span>
      <div
        class="emotion-2"
      >
        Error message.
      </div>
    </div>
  </div>
</div>
`;
